<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="Cell" Id="{46e5b9e9-8ed1-48e9-b548-e035870799a0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bPalmButton:BOOL;
	bHousingPresent:BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>