<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="SequencyControl" Id="{7dbeb3d8-e35b-4761-9a31-09968c80dca7}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM SequencyControl
VAR
	index:WORD;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE SEQ.iSeqStepN OF 
	 0:    //INIT
		 SEQ.sSeqStepDescription:='Init';
		 SEQ.bSeqStep_TaskDone[0]:=VAL.bAllValves_At_Home AND Cell.bHousingPresent AND Cell.bPalmButton;  //trigger the sequency
		 IF SEQ.bSeqStepN_TaskDone_DelayDone[0] THEN
			 FOR index:=1 TO SEQ.iStepN DO
				 SEQ.bSeqStep_TaskDone[index]:=FALSE;
			 END_FOR
			 seq.iSeqStepN:=5;
		 END_IF
	5:
		 SEQ.sSeqStepDescription:='Loading parts to hoursing';
		 SEQ.bSeqStep_TaskDone[5]:=VAL.bValve_A_AtWorkSensor;
		 IF SEQ.bSeqStepN_TaskDone_DelayDone[5] THEN
			 FOR index:=6 TO SEQ.iStepN DO
				 SEQ.bSeqStep_TaskDone[index]:=FALSE;
			 END_FOR
			 seq.iSeqStepN:=10;
		 END_IF
	10:
		 SEQ.sSeqStepDescription:='Clamp house';
		 SEQ.bSeqStep_TaskDone[10]:=VAL.bValve_A_AtWorkSensor AND VAl.bValve_B_AtWorkSensor;
		 IF SEQ.bSeqStepN_TaskDone_DelayDone[10] THEN
			 FOR index:=11 TO SEQ.iStepN DO
				 SEQ.bSeqStep_TaskDone[index]:=FALSE;
			 END_FOR
			 seq.iSeqStepN:=15;
		 END_IF
	15:
  	     SEQ.sSeqStepDescription:='Press/crimp the housing';
		 SEQ.bSeqStep_TaskDone[15]:=VAL.bValve_B_AtWorkSensor AND VAL.bValve_C_AtWorkSensor AND VAL.bValve_A_AtHomeSensor;
		 IF SEQ.bSeqStepN_TaskDone_DelayDone[15] THEN
			 FOR index:=0 TO SEQ.iStepN DO
				 SEQ.bSeqStep_TaskDone[index]:=FALSE;
			 END_FOR
			 seq.iSeqStepN:=20;
		 END_IF
	20:
  	     SEQ.sSeqStepDescription:='Open clamp';
		 SEQ.bSeqStep_TaskDone[20]:=VAl.bValve_B_AtHomeSensor;
		 IF SEQ.bSeqStepN_TaskDone_DelayDone[20] THEN
			 FOR index:=21 TO SEQ.iStepN DO
				 SEQ.bSeqStep_TaskDone[index]:=FALSE;
			 END_FOR
			 seq.iSeqStepN:=25;
		 END_IF
	25:  //work on cyl D
		 SEQ.sSeqStepDescription:='Heat houring for 10s';
		 SEQ.bSeqStep_TaskDone[25]:=VAL.bValve_D_AtWorkSensor AND VAL.bValve_C_AtWorkSensor;
		 IF SEQ.bSeqStepN_TaskDone_DelayDone[25] THEN
			 FOR index:=26 TO SEQ.iStepN DO
				 SEQ.bSeqStep_TaskDone[index]:=FALSE;
			 END_FOR
			 seq.iSeqStepN:=30;
		 END_IF
	30:  //home, home cyn C and Cyn B
		 SEQ.sSeqStepDescription:='Stop heat, open clamp';
		 SEQ.bSeqStep_TaskDone[30]:=VAL.bValve_C_AtHomeSensor AND VAL.bValve_D_AtHomeSensor;
		 IF SEQ.bSeqStepN_TaskDone_DelayDone[30] THEN
//			 FOR index:=26 TO SEQ.iStepN DO
//				 SEQ.bSeqStep_TaskDone[index]:=FALSE;
//			 END_FOR
			 seq.iSeqStepN:=0;
		 END_IF
END_CASE
SequencyCondition();]]></ST>
    </Implementation>
    <Method Name="SequencyCondition" Id="{e73106a6-1c9e-4dba-ba76-41c8a3223427}">
      <Declaration><![CDATA[METHOD PUBLIC SequencyCondition : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[SEQ.fbSeqStepN_TaskDone_DelayTmr[0](IN:= SEQ.bSeqStep_TaskDone[0], PT:=T#2S , Q=>SEQ.bSeqStepN_TaskDone_DelayDone[0] );
SEQ.fbSeqStepN_TaskDone_DelayTmr[5](IN:= SEQ.bSeqStep_TaskDone[5], PT:=T#2S , Q=>SEQ.bSeqStepN_TaskDone_DelayDone[5] );
SEQ.fbSeqStepN_TaskDone_DelayTmr[10](IN:= SEQ.bSeqStep_TaskDone[10], PT:=T#2S , Q=>SEQ.bSeqStepN_TaskDone_DelayDone[10] );
SEQ.fbSeqStepN_TaskDone_DelayTmr[15](IN:= SEQ.bSeqStep_TaskDone[15], PT:=T#2S , Q=>SEQ.bSeqStepN_TaskDone_DelayDone[15] );
SEQ.fbSeqStepN_TaskDone_DelayTmr[20](IN:= SEQ.bSeqStep_TaskDone[20], PT:=T#2S , Q=>SEQ.bSeqStepN_TaskDone_DelayDone[20] );
SEQ.fbSeqStepN_TaskDone_DelayTmr[25](IN:= SEQ.bSeqStep_TaskDone[25], PT:=T#10S , Q=>SEQ.bSeqStepN_TaskDone_DelayDone[25] );
SEQ.fbSeqStepN_TaskDone_DelayTmr[30](IN:= SEQ.bSeqStep_TaskDone[30], PT:=T#2S , Q=>SEQ.bSeqStepN_TaskDone_DelayDone[30] );]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="SequencyControl">
      <LineId Id="5" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="67" Count="1" />
      <LineId Id="66" Count="0" />
      <LineId Id="15" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="64" Count="1" />
      <LineId Id="63" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="61" Count="1" />
      <LineId Id="60" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="58" Count="1" />
      <LineId Id="57" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="37" Count="1" />
      <LineId Id="45" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="55" Count="1" />
      <LineId Id="54" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="51" Count="2" />
      <LineId Id="35" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="74" Count="7" />
      <LineId Id="73" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="21" Count="0" />
    </LineIds>
    <LineIds Name="SequencyControl.SequencyCondition">
      <LineId Id="6" Count="0" />
      <LineId Id="10" Count="4" />
      <LineId Id="18" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>